# grimapp

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  README.md  docker-compose.test.yml  eslint.config.js  index.html  launch-player.sh  launch-st.sh  package.json  tsconfig.json  vite.config.js  wrangler.toml
.github/workflows/: ci.yml  deploy-backend.yml  linter.yml
docs/: grimkeeper-integration-spec.js
public/: _redirects  _routes.json
public/auth/: callback.html
server/: .env.example  api-shared.js  api_v1.js  cleanup.js  ecosystem.config.cjs  index.js  logger.js  package.json
server-rs/: .env.example  .gitignore  Cargo.toml  README.md  build.sh  tunnel.sh
server-rs/src/: config.rs  database.rs  error.rs  main.rs  models.rs  state.rs
server-rs/src/handlers/: auth.rs  health.rs  mod.rs  session.rs  websocket.rs
server-rs/src/handlers/api/: v1.rs
server-rs/src/middleware/: auth.rs  mod.rs
server-rs/src/services/: game.rs  mod.rs  rate_limit.rs  session.rs
server-rs/src/utils/: validation.rs
server/handlers/: LegacyAPIHandler.js
server/migrations/: 001_player_tracking.sql  002_track_starting_roles.sql  003_grimlive_integration.sql
server/repositories/: PostgreSQLRepository.js
server/scripts/: cleanup_orphaned_games.sql
server/services/: CleanupService.js  ConfigService.js  GameService.js  TimerService.js  (+3 more)
src/: App.vue  characters.json  customs.json  main.js  media.scss  nightsheet.json  non_player_characters.json  shims-vuex.d.ts  shims-window.d.ts  vars.scss
src-tauri/: tauri.conf.json  tauri.play.conf.json  tauri.st.conf.json
(+56 files in other folders)
